# decision-intelligence-mcp

./: README.md  pyproject.toml  server.json
src/classical_strategy_mcp/: __init__.py  main.py
tests/: test_smoke.py
