[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "classical-strategy-mcp"
version = "0.1.0"
description = "MCP server: 5,000 years of military strategy and philosophy — Napoleon, Sun Tzu, Clausewitz, Alexander, Hannibal, Genghis Khan, Shaka Zulu, Caesar. All public domain."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp","strategy","military","napoleon","sun-tzu","clausewitz","philosophy","history","public-domain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["fastmcp>=2.0.0"]

[project.urls]
Homepage = "https://github.com/gabrielmahia/classical-strategy-mcp"
Repository = "https://github.com/gabrielmahia/classical-strategy-mcp"
"MCP Servers" = "https://glama.ai/mcp/servers?query=author:gabrielmahia"

[project.scripts]
classical-strategy-mcp = "classical_strategy_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/classical_strategy_mcp"]
